Fix: Revert lambda and use allowedOriginPatterns for CORS